--- a/NanoSingular.RazorApi/Pages/Profile/Index.cshtml
+++ b/NanoSingular.RazorApi/Pages/Profile/Index.cshtml
@@ -36,162 +36,13 @@
         </button>
     </div>
 
-    <!-- Panel (Basic Info) -->
-    <div class="panel tab-panel active" id="basicInfo">
-        <!-- Form Block -->
-        <div class="form-block">
-            <div class="form-block__title">
-                Edit your account information
-            </div>
-            <div class="form-block__fields">
-                <div class="avatar avatar--large">
-                    <div class="avatar__image-area">
-                        <svg>
-                            <use xlink:href="/assets/css/sprite.svg#icon-user"></use>
-                        </svg>
-                    </div>
-                    <div class="avatar__cta">
-                        <svg>
-                            <use xlink:href="/assets/css/sprite.svg#icon-camera-2"></use>
-                        </svg>
-                    </div>
-                    <div class="avatar__title-group">
-                        <div class="avatar__title-group__title">
-                            Jean-Luc Picard
-                        </div>
-                        <div class="avatar__title-group__sub">
-                            Admin Level User
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <partial name="_BasicInfo"/>
 
-            <div class="form-block__fields grid-fields-2">
+    <partial name="_Preferences" />
 
-                <!-- Field Group -->
-                <div class="field-group">
-                    <div class="field-group__title">
-                        First Name
-                    </div>
-                    <div class="field-group__input-area">
-                        <input type="text" placeholder="First Name">
-                    </div>
-                </div>
-
-                <!-- Field Group -->
-                <div class="field-group">
-                    <div class="field-group__title">
-                        Last Name
-                    </div>
-                    <div class="field-group__input-area">
-                        <input type="text" placeholder="Last Name">
-                    </div>
-                </div>
-
-                <!-- Field Group -->
-                <div class="field-group">
-                    <div class="field-group__title">
-                        Email
-                    </div>
-                    <div class="field-group__input-area">
-                        <input type="text" placeholder="Email">
-                    </div>
-                </div>
-
-                <!-- Field Group -->
-                <div class="field-group">
-                    <div class="field-group__title">
-                        Phone Number
-                    </div>
-                    <div class="field-group__input-area">
-                        <input type="text" placeholder="Phone Number">
-                    </div>
-                </div>
-
-            </div>
-            <div class="form-block__cta">
-                <button class="btn small" disabled>Save Changes</button>
-            </div>
-        </div>
+    <partial name="_Password" />
 
 
-    </div>
-
-    <!-- Panel (Preferences) -->
-    <div class="panel tab-panel" id="preferences">
-        <!-- Form Block -->
-        <div class="form-block">
-            <div class="form-block__title">
-                Update your preferences
-            </div>
-
-
-            <div class="form-block__fields ">
-
-                <!-- Field Group -->
-                    <div class="field-group label-horizontal">
-                        <div class="field-group__title">
-                            Dark Mode Default
-                        </div>
-                        <div class="field-group__input-area">
-                            <input type="checkbox" class="switchery-switch" checked id="isDarkDefault" />
-                        </div>
-                    </div>
-
-            </div>
-            <div class="form-block__cta">
-                <button class="btn small" disabled>Save Changes</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Panel (Password) -->
-    <div class="panel tab-panel" id="password">
-        <!-- Form Block -->
-        <div class="form-block">
-            <div class="form-block__title">
-                Change your password
-            </div>
-
-
-            <div class="form-block__fields ">
-
-                <!-- Field Group -->
-                <div class="field-group">
-                    <div class="field-group__title">
-                        Current Password
-                    </div>
-                    <div class="field-group__input-area">
-                        <input type="text" placeholder="Current Password">
-                    </div>
-                </div>
-
-                <!-- Field Group -->
-                <div class="field-group">
-                    <div class="field-group__title">
-                        New Password
-                    </div>
-                    <div class="field-group__input-area">
-                        <input type="text" placeholder="New Password">
-                    </div>
-                </div>
-
-                <!-- Field Group -->
-                <div class="field-group">
-                    <div class="field-group__title">
-                        Confirm New Password
-                    </div>
-                    <div class="field-group__input-area">
-                        <input type="text" placeholder="Confirm New Password">
-                    </div>
-                </div>
-
-            </div>
-            <div class="form-block__cta">
-                <button class="btn small" disabled>Save Changes</button>
-            </div>
-        </div>
-    </div>
 </div>
 
 @section Scripts {
