--- a/NanoSingular.RazorApi/Pages/Venues/Edit.cshtml
+++ b/NanoSingular.RazorApi/Pages/Venues/Edit.cshtml
@@ -45,8 +45,8 @@
                     Venue Name
                 </div>
                 <div class="field-group__input-area">
-                    <input asp-for="UpdateVenueRequest.Name" />
-                    <span asp-validation-for="UpdateVenueRequest.Name" class="red-text"></span>
+                    <input asp-for="updateVenueRequest.Name" />
+                    <span asp-validation-for="updateVenueRequest.Name" class="red-text"></span>
                 </div>
             </div>
 
@@ -56,8 +56,8 @@
                     Venue Description
                 </div>
                 <div class="field-group__input-area">
-                    <input asp-for="UpdateVenueRequest.Description" />
-                    <span asp-validation-for="UpdateVenueRequest.Description" class="red-text"></span>
+                    <input asp-for="updateVenueRequest.Description" />
+                    <span asp-validation-for="updateVenueRequest.Description" class="red-text"></span>
                 </div>
 
             </div>
